# robotics_talk

./: .gitignore  .gitmodules  README.adoc
1/: build.sh  run.sh
1/docker/: Dockerfile
2/: build.sh  run.sh
2/workspace/example_topic/: package.xml  setup.cfg  setup.py
2/workspace/example_topic/example_topic/: example_node.py  example_subscriber.py
3/workspace/example_service/: package.xml  setup.cfg  setup.py
3/workspace/example_service/example_service/: example_service.py
5/: build.sh  run.sh
5/docker/: Dockerfile  entrypoint.py  entrypoint.sh
5/gazebo/src/example_sim/: package.xml  setup.cfg  setup.py
5/gazebo/src/example_sim/example_sim/: takeoff_service.py
5/gazebo/src/example_sim/launch/: apm.launch.xml  run_sim.launch  run_sim.launch.py
5/gazebo/src/example_sim/models/iris_with_standoffs/: model.sdf
5/gazebo/src/example_sim/scripts/: arducopter.sh
