<?xml version="1.0"?>
<package format="2">
  <name>example_sim</name>
  <version>0.0.0</version>
  <description>The example_sim package</description>

  <maintainer email="john@todo.todo">john</maintainer>

  <license>TODO</license>

  <depend>rclpy</depend>
  <build_depend>mavros</build_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <build_type>ament_python</build_type>
  </export>
</package>
